--- a/css/general.css
+++ b/css/general.css
@@ -23,12 +23,14 @@ Paragraph default: 1.6
 --- 02 Colors ---
 
 - Primary: #e67e22
-- Tints: #fdf2e9, #fae5d3
-- Shades: #cf711f
+- Tints: #fdf2e9, #fae5d3, #eb984e
+- Shades: #cf711f, #45260a
 - Accents: 
 - Greys: #555, #333, #6f6f6f (lightest grey allowed on #fdf2e9)
 
 --- 05 Shadows ---
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 Border Radius ---
 
@@ -129,6 +131,7 @@ body {
   letter-spacing: 0.75;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -137,6 +140,9 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
   transition: all 0.3s;
 }
 
@@ -162,6 +168,18 @@ body {
   background-color: #fdf2e9;
   color: #555;
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -198,6 +216,11 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgb(230, 126, 34, 0.5);
 }
 
 /* Helper Classes */
