--- a/css/general.css
+++ b/css/general.css
@@ -15,6 +15,7 @@ Default: 1
 Small: 1.05
 Medium: 1.2
 Paragraph default: 1.6
+Large: 1.8
 
 - Letter spacing
 0.5px
@@ -52,6 +53,7 @@ Medium: 11px
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -59,6 +61,7 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 /*************************/
@@ -101,7 +104,8 @@ body {
 }
 
 .heading-primary,
-.heading-secondary {
+.heading-secondary,
+.heading-tertiary {
   font-weight: 700;
   color: #333;
   letter-spacing: -0.5px;
@@ -214,6 +218,7 @@ body {
   gap: 1.6rem;
   align-items: center;
   font-size: 1.8rem;
+  line-height: 1.2;
 }
 
 .list-icon {
